// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemAddressWithLinks Адрес новостройки 0 1`] = `
<div>
  <withTheme(Link)
    size="unset"
    url="testLink"
    withInheritColor={true}
  >
    <a
      className="Link Link_js_inited Link_size_unset Link_theme_islands Link_withInheritColor"
      href="testLink"
      onClick={[Function]}
    >
      Москва
    </a>
  </withTheme(Link)>
  , пос. Сосенское, д. Столбово, пр. Куприна, 10 км до МКАД
</div>
`;

exports[`ItemAddressWithLinks Адрес новостройки 1 1`] = `
<div>
  <withTheme(Link)
    size="unset"
    url="testLink"
    withInheritColor={true}
  >
    <a
      className="Link Link_js_inited Link_size_unset Link_theme_islands Link_withInheritColor"
      href="testLink"
      onClick={[Function]}
    >
      Московская обл.
    </a>
  </withTheme(Link)>
  , Люберцы, ул. Камова, 10 км до МКАД
</div>
`;

exports[`ItemAddressWithLinks Адрес новостройки 2 1`] = `
<div>
  Нижегородская обл., Кстовский район, пос. Культура, ул. Изумрудная
</div>
`;

exports[`ItemAddressWithLinks Адрес новостройки 3 1`] = `
<div>
  <withTheme(Link)
    size="unset"
    url="testLink"
    withInheritColor={true}
  >
    <a
      className="Link Link_js_inited Link_size_unset Link_theme_islands Link_withInheritColor"
      href="testLink"
      onClick={[Function]}
    >
      Нижегородская обл.
    </a>
  </withTheme(Link)>
  , Кстовский район, пос. Культура, ул. Изумрудная
</div>
`;
